<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.filters.ui.FiltersFragment">

    <TextView
        android:id="@+id/filtersInnerTitle"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="52dp"
        android:paddingTop="@dimen/margin_default_input"
        android:paddingBottom="@dimen/margin_default_input"
        android:text="@string/filters_s"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/filtersInnerBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_input"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/filtersInnerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filtersInnerTitle" />

    <TextView
        android:id="@+id/filtersInnerClear"
        style="@style/InterMedium.HeaderH5InterMedium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:textColor="@color/main_blue"
        android:layout_marginEnd="@dimen/margin_default_input"
        app:layout_constraintBottom_toBottomOf="@+id/filtersInnerBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filtersInnerBackBtn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filtersInnerRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/filtersInnerApplyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtersInnerTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filtersInnerApplyBtn"
        style="@style/ContainedBtnGeneralLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingEnd="57dp"
        android:paddingStart="57dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/apply_filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
